# monorepo

./: .bazelrc  .editorconfig  .gitattributes  .gitignore  .npmrc  .prettierignore  BUILD  CODE_OF_CONDUCT.md  DECLARTION_OF_TRANSHUMANITY.md  FirstPartyStub.kt  LICENSE  MODULE.bazel  README.md  THIRD_PARTY  WORKSPACE  apply_third_pass.py  apply_topics_4.py  apply_topics_5.py  auto_factory.bzl  bazel_vendoring.sh  check_unassociated.py  everything.bazelproject  external_dependencies.md  extracted_text.txt  fetch_goldens.sh  find_naked_pieces.py  find_text.py  fix_10_words.py  fix_naked_pieces.py  formatting.sh  hugo.bzl  java.bazelproject  local_bazelrc  lock_maven_com_jackbradshaw.json  lock_maven_grpc_kotlin.json  lock_pip_requirements.txt  main.bazelproject  migrate_themes.py  package.json  patch.kt  (+17 more)
.aspect/rules/external_repository_action_cache/: npm_translate_lock_LTE4Nzc1MDcwNjU=
.github/: CODEOWNERS
.github/workflows/: ci.yml
autofactory/: autofactory.bzl
bazel/: .bazelrc  all.bazelproject  auto_factory.bzl  repositories-bazel.bzl  repositories-maven.bzl  robolectric.bzl
bazel/auto_factory/: auto_factory.bzl
bazel/swig/: BUILD  swig.bzl
first_party/: README.md
first_party/autofactory/: BUILD  README.md
first_party/backstab/: BUILD  BackstabKsp.kt  BackstabKspTest.kt  README.md  TestingComponents.kt  architecture.md  design.md  publicity.bzl  testing_strategy.md
first_party/backstab/annotations/: AggregateScope.kt  BUILD  Backstab.kt  MetaScope.kt
first_party/backstab/core/: BUILD  BackstabCoreComponent.kt  BackstabCoreScope.kt  CoreComponent.kt  CoreComponentImpl.kt  CoreScope.kt
first_party/backstab/entrypoint/: BUILD  BackstabProcessor.kt
first_party/backstab/ksp/: BUILD
first_party/backstab/processor/: BUILD  BackstabCoreComponent.kt  BackstabCoreComponentImpl.kt  BackstabCoreScope.kt  BackstabGenerator.kt  BackstabModel.kt  BackstabProcessor.kt  BackstabProcessorProvider.kt  Processor.kt  ProcessorComponent.kt  (+6 more)
first_party/bash_runfiles/: BUILD  README.md  bats_test.bzl  filegroup.bzl  inject_runfiles.bzl  shell.bzl  validate_sources.bzl
first_party/build_tests/: BUILD  README.md  build_tests_standard.md  directives.md  publicity.bzl
first_party/cheaterfinder/: BUILD  main.py
first_party/chronosphere/: BUILD  README.md
first_party/closet/: BUILD  ClosetScope.kt  README.md
first_party/codestone/: PAPER.md  README.md
first_party/concurrency/: BUILD  Concurrency.kt  ConcurrencyComponent.kt  ConcurrencyComponentImpl.kt  ConcurrencyScope.kt  README.md  Stub.java
first_party/contributing/: BUILD  README.md  publicity.bzl  writing_voice_evolution.md
first_party/coroutines/: BUILD  Coroutines.kt  CoroutinesComponent.kt  CoroutinesComponentImpl.kt  CoroutinesDaggerScope.kt  CoroutinesScope.kt  README.md  Stub.java
first_party/council/: BUILD  README.md  publicity.bzl  server.py  start.sh
first_party/dagger/: BUILD  README.md  defs.bzl
first_party/dr_bashir/: README.md
first_party/experimental/: BUILD
first_party/externalresourcehost/: ExternalResourceHost.kt
first_party/formatting/: BUILD  README.md  prettier.config.cjs  publicity.bzl
first_party/kale/: BUILD  KaleScope.kt  README.md
first_party/klu/: BUILD  KluScope.kt  README.md  Stub.java  pom_template.xml  release.sh
first_party/kmonkey/: BUILD  README.md  Stub.java  pom_template.xml  release.sh
first_party/model/: README.md
first_party/oksp/: design.md  publicity.bzl
first_party/otter/: BUILD  Otter.kt  OtterComponent.kt  OtterComponentImpl.kt  README.md  pom_template.xml  publicity.bzl  release.sh
first_party/presubmit/: BUILD  README.md  build.sh  check_experimental_deps.sh  formatting.sh  markdown.sh  markdown_directives.sh  presubmit.sh  publicity.bzl  test.sh
first_party/publicity/: BUILD  README.md  defs.bzl
first_party/quinn/: BUILD  QuinnScope.kt  README.md
first_party/random/: Random.kt  RandomFake.kt  RandomSimplex.kt
first_party/releasing/: BUILD  README.md  Snapshot.kt  design.md
first_party/rules_bats/: BUILD  README.md  defs.bzl  runner.sh
first_party/rules_hugo/: BUILD  README.md  fetch_external_repo.bzl  fetch_hugo_executable.bzl  fetch_rules_hugo.bzl  install_rules_hugo.bzl
first_party/sasync/: BUILD  README.md  Sasync.kt  SasyncScope.kt  SasyncTest.kt
first_party/site/: BUILD  JOURNAL_EDITING_DIRECTIVES.md  JOURNAL_EDITORIAL.md  JOURNAL_ORGANISATION.md  JOURNAL_ORGANISATION_DIRECTIVES.md  JOURNAL_TAXONOMY.md  README.md  config.toml  firebase.json  hugo.toml  publicity.bzl  release.sh
first_party/standards/: README.md  dagger_standard.md  general_code_block_standard.md  general_documentation_standard.md  git_lfs_standard.md  markdown_standard.md  readme_standard.md  shell_code_block_standard.md  standard_for_standard_documents.md  standard_for_standards.md  starlark_code_block_standard.md  todo_standard.md
first_party/tofu/: BUILD  README.md  design_draft.odt  publicity.bzl
first_party/universal/: README.md
first_party/wheatley/: BUILD  ContractTest.kt  README.md
formatting/: BUILD  buildifier  formatting.sh  ktfmt  prettier.config.cjs
formatting/prettier/: BUILD
presubmit/: README.md  all_build_files_formatted.sh  all_kotlin_files_formatted.kt  all_kotlin_files_formatted.sh  all_targets_build.sh  all_targets_pass.sh  all_tests_pass.sh  build.sh  format_build.sh  format_kotlin.sh  formatting.sh  manifest.sh  presubmit.sh  test.sh  vendor.sh
shell/: .bashrc  .gitconfig  .vimrc  .zshrc  README.md  bash_tools.sh  bazel_tools.sh  dir_tools.sh  dir_tweaks.sh  git_tools.sh  java_tools.sh  misc_prefs.sh  path.sh  secret_tools.sh  self_constants.sh  setup_local.sh  setup_session.sh  shell_tools.sh  src_constants.sh  src_tools.sh  sw_installation_tools.sh  sys_tools.sh  tmux_tools.sh  tmux_tweaks.sh  vc_tools.sh  ws_constants.sh  ws_tools.sh
shell/.gpgkeys/: jackbradshaw_private.gpg  jackbradshaw_public.pub
shell/.ssh/: matthewbradshaw_private.gpg  matthewbradshaw_public.pub
tools/: BUILD  README.md  bazel  bazel.bat  ktfmt
tools/prettier/: BUILD  prettier.sh
unreal/: .gitignore
unreal/ovr/: ovr.uproject
(+3514 files in other folders)
